--- a/config/gearwrench/default/responsive_image.styles.hero.yml
+++ b/config/gearwrench/default/responsive_image.styles.hero.yml
@@ -3,17 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
-    - image.style.biggest_landscape_2x1
-    - image.style.biggest_landscape_3x2
-    - image.style.huge_landscape_3x2
-    - image.style.huge_landscape_4x3
-    - image.style.large_landscape_4x3
-    - image.style.large_landscape_5x4
+    - image.style.biggest_landscape_3x1
+    - image.style.huge_landscape_2x1
+    - image.style.large_1x1
     - image.style.medium_1x1
-    - image.style.medium_landscape_3x2
-    - image.style.medium_landscape_5x4
-    - image.style.small_1x1
-    - image.style.small_portrait_1x2
+    - image.style.small_portrait_2x3
   theme:
     - gearwrench
 _core:
@@ -22,21 +16,34 @@ id: hero
 label: Hero
 image_style_mappings:
   -
-    breakpoint_id: gearwrench.All
+    breakpoint_id: gearwrench.grande
     multiplier: 1x
-    image_mapping_type: sizes
-    image_mapping:
-      sizes: 100vw
-      sizes_image_styles:
-        - biggest_landscape_2x1
-        - biggest_landscape_3x2
-        - huge_landscape_3x2
-        - huge_landscape_4x3
-        - large_landscape_4x3
-        - large_landscape_5x4
-        - medium_1x1
-        - medium_landscape_5x4
-        - small_1x1
-        - small_portrait_1x2
+    image_mapping_type: image_style
+    image_mapping: biggest_landscape_3x1
+  -
+    breakpoint_id: gearwrench.xlarge
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: huge_landscape_2x1
+  -
+    breakpoint_id: gearwrench.large
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: large_1x1
+  -
+    breakpoint_id: gearwrench.medium
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: medium_1x1
+  -
+    breakpoint_id: gearwrench.small
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: small_portrait_2x3
+  -
+    breakpoint_id: gearwrench.xsmall
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: small_portrait_2x3
 breakpoint_group: gearwrench
-fallback_image_style: medium_landscape_3x2
+fallback_image_style: biggest_landscape_3x1
