--- a/config/gearwrench_au/default/block.block.gearwrench_au_page_title.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_page_title.yml
@@ -2,6 +2,8 @@ uuid: 81bb072e-4def-49e0-b4b1-e9f03f121a76
 langcode: en
 status: true
 dependencies:
+  module:
+    - node
   theme:
     - gearwrench_au
 _core:
@@ -17,4 +19,14 @@ settings:
   label: 'Page title'
   label_display: '0'
   provider: core
-visibility: {  }
+visibility:
+  'entity_bundle:node':
+    id: 'entity_bundle:node'
+    negate: false
+    context_mapping:
+      node: '@node.node_route_context:node'
+    bundles:
+      landing_page: landing_page
+      page: page
+      product_category: product_category
+      product_industry: product_industry
