--- a/composer.json
+++ b/composer.json
@@ -47,26 +47,26 @@
         "drupal/acquia_connector": "^3.0",
         "drupal/acquia_purge": "^1.2",
         "drupal/acquia_search": "^3.0.0",
-        "drupal/address": "^1.3",
+        "drupal/address": "^1.10",
         "drupal/admin_toolbar": "^3.0",
         "drupal/advagg": "^4.0",
-        "drupal/allowed_formats": "^1.1",
+        "drupal/allowed_formats": "^1.4",
         "drupal/better_exposed_filters": "^5.0@beta",
         "drupal/bg_image_formatter": "^1.2",
         "drupal/blazy": "^2.2",
         "drupal/block_class": "^1.1",
         "drupal/block_field": "^1.0@alpha",
-        "drupal/classy_paragraphs": "^1.0@beta",
+        "drupal/classy_paragraphs": "^1.0-rc1",
         "drupal/color_field": "^2.4",
         "drupal/config_export_ignore": "^1.1",
         "drupal/config_ignore": "^2.0",
         "drupal/config_split": "^1.0",
         "drupal/config_update": "1.7",
-        "drupal/core-composer-scaffold": "^9.0",
-        "drupal/core-dev": "^9.3.0",
-        "drupal/core-project-message": "^9.0.0",
-        "drupal/core-recommended": "^9.0",
-        "drupal/core-vendor-hardening": "^9.0.0",
+        "drupal/core-composer-scaffold": "^9.3.4",
+        "drupal/core-dev": "^9.3.4",
+        "drupal/core-project-message": "^9.3.4",
+        "drupal/core-recommended": "^9.3.4",
+        "drupal/core-vendor-hardening": "^9.3.4",
         "drupal/current_page_crumb": "^1.2",
         "drupal/devel": "^4.1",
         "drupal/devel_entity_updates": "^3.0",
@@ -95,11 +95,11 @@
         "drupal/linkit": "^5.0@beta",
         "drupal/login_emailusername": "^1.1",
         "drupal/media_responsive_thumbnail": "^1.0",
-        "drupal/media_video_micromodal": "^1.0",
+        "drupal/media_video_micromodal": "^1.0.5",
         "drupal/memcache": "^2.0@alpha",
         "drupal/menu_link_attributes": "^1.0",
         "drupal/menu_trail_by_path": "^1.0",
-        "drupal/metatag": "^1.0",
+        "drupal/metatag": "^1.19",
         "drupal/metatag_async_widget": "^1.0@alpha",
         "drupal/migrate_plus": "^5.1",
         "drupal/migrate_tools": "^5.0",
@@ -117,8 +117,8 @@
         "drupal/redirect": "^1.0",
         "drupal/robotstxt": "^1.3",
         "drupal/schema_metatag": "^2.1",
-        "drupal/search_api": "^1.20",
-        "drupal/search_api_solr": "^4.2",
+        "drupal/search_api": "^1.23",
+        "drupal/search_api_solr": "^4.2.7",
         "drupal/selective_better_exposed_filters": "^2.0@beta",
         "drupal/shield": "^1.0",
         "drupal/simple_sitemap": "^3.3",
@@ -134,9 +134,9 @@
         "drupal/twig_tweak": "^3.1",
         "drupal/ultimate_cron": "^2.0@alpha",
         "drupal/video_embed_field": "^2.0",
-        "drupal/views_data_export": "^1.0",
+        "drupal/views_data_export": "^1.1",
         "drupal/viewsreference": "^2.0@alpha",
-        "drupal/viewsreference_filter": "^1.0",
+        "drupal/viewsreference_filter": "^1.0.3",
         "drupal/webform": "^6.0",
         "drush/drush": "^10.3",
         "facebook/graph-sdk": "^5.7",
@@ -285,9 +285,6 @@
             },
             "drupal/migrate_plus": {
                 "https://www.drupal.org/project/migrate_plus/issues/2787157": "https://www.drupal.org/files/issues/2020-10-06/fix_xpath_error-2787157-17.patch"
-            },
-            "drupal/migrate_tools": {
-                "https://www.drupal.org/project/migrate_tools/issues/3117485": "https://www.drupal.org/files/issues/2020-03-06/fetch-migration-requirements-3117485-2.patch"
             },
             "drupal/simple_gmap": {
                 "https://www.drupal.org/node/2863979": "https://www.drupal.org/files/issues/2018-11-21/simple_gmap-address-formatter-2863979-36.patch"
