--- a/config/gearwrench_au/default/core.entity_view_display.node.landing_page.search_index.yml
+++ b/config/gearwrench_au/default/core.entity_view_display.node.landing_page.search_index.yml
@@ -26,27 +26,19 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 1
+    weight: 0
     region: content
   field_component_hero:
     type: entity_reference_revisions_entity_view
     label: hidden
     settings:
-      view_mode: full
+      view_mode: search_index
       link: ''
     third_party_settings: {  }
-    weight: 0
-    region: content
-  field_components:
-    type: entity_reference_revisions_entity_view
-    label: hidden
-    settings:
-      view_mode: full
-      link: ''
-    third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
 hidden:
+  field_components: true
   field_media: true
   field_meta_tags: true
   langcode: true
