--- a/config/gearwrench_au/default/views.view.media_pages.yml
+++ b/config/gearwrench_au/default/views.view.media_pages.yml
@@ -326,7 +326,7 @@ display:
           replica: false
           query_tags: {  }
       relationships: {  }
-      use_ajax: true
+      use_ajax: false
       header: {  }
       footer: {  }
       display_extenders: {  }
