--- a/config/gearwrench_au/default/views.view.new_products.yml
+++ b/config/gearwrench_au/default/views.view.new_products.yml
@@ -113,7 +113,7 @@ display:
               autosubmit: true
               autosubmit_exclude_textfield: false
               autosubmit_textfield_delay: 500
-              autosubmit_hide: false
+              autosubmit_hide: true
               input_required: false
               allow_secondary: false
               secondary_label: 'Advanced options'
@@ -122,6 +122,7 @@ display:
               field_product_classifications_target_id:
                 plugin_id: bef
                 advanced:
+                  sort_options: false
                   rewrite:
                     filter_rewrite_values: ''
                   collapsible: false
