--- a/config/gearwrench_au/default/views.view.new_products.yml
+++ b/config/gearwrench_au/default/views.view.new_products.yml
@@ -113,7 +113,7 @@ display:
               autosubmit: true
               autosubmit_exclude_textfield: false
               autosubmit_textfield_delay: 500
-              autosubmit_hide: false
+              autosubmit_hide: true
               input_required: false
               allow_secondary: false
               secondary_label: 'Advanced options'
@@ -122,6 +122,7 @@ display:
               field_product_classifications_target_id:
                 plugin_id: bef
                 advanced:
+                  sort_options: false
                   rewrite:
                     filter_rewrite_values: ''
                   collapsible: false
@@ -129,8 +130,8 @@ display:
                 select_all_none: false
                 select_all_none_nested: false
                 display_inline: false
-                options_show_only_used: 1
-                options_show_only_used_filtered: 0
+                options_show_only_used: 0
+                options_show_only_used_filtered: 1
       access:
         type: perm
         options:
@@ -294,7 +295,7 @@ display:
           reduce_duplicates: false
           vid: product_classifications
           type: select
-          hierarchy: false
+          hierarchy: true
           limit: true
           error_message: false
       style:
