--- a/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
+++ b/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
@@ -551,6 +551,8 @@ view--media-pages:
   css:
     component:
       css/libraries/view/media-pages.css: {}
+  js:
+    js/libraries/view/media-pages.js: {}
 
 view--taxonomy-term:
   version: 1.x
@@ -590,6 +592,8 @@ view--product-industry-grid:
   css:
     component:
       css/libraries/view/product-industry-grid.css: {}
+  js:
+    js/libraries/view/product-industry-grid.js: {}
 
 view--acquia-search:
   version: 1.x
