--- a/config/sata_brazil/remote_dev/purge.logger_channels.yml
+++ b/config/sata_brazil/remote_dev/purge.logger_channels.yml
@@ -20,3 +20,9 @@ channels:
       - 0
       - 2
       - 3
+  -
+    id: purger_acquia_purge_1aa2682023
+    grants:
+      - 0
+      - 2
+      - 3
