--- a/config/gearwrench/default/webform.webform.email_sign_up.yml
+++ b/config/gearwrench/default/webform.webform.email_sign_up.yml
@@ -55,10 +55,10 @@ elements: |-
 css: ''
 javascript: ''
 settings:
-  ajax: true
+  ajax: false
   ajax_scroll_top: form
-  ajax_progress_type: throbber
-  ajax_effect: fade
+  ajax_progress_type: ''
+  ajax_effect: ''
   ajax_speed: null
   page: true
   page_submit_path: ''
@@ -154,12 +154,12 @@ settings:
   draft_loaded_message: ''
   draft_pending_single_message: ''
   draft_pending_multiple_message: ''
-  confirmation_type: inline
+  confirmation_type: url
   confirmation_url: /form-submission-thank-you
   confirmation_title: ''
-  confirmation_message: 'Thank you for subscribing!'
+  confirmation_message: ''
   confirmation_attributes: {  }
-  confirmation_back: false
+  confirmation_back: true
   confirmation_back_label: ''
   confirmation_back_attributes: {  }
   confirmation_exclude_query: true
