--- a/config/sata_emea/remote_dev/acquia_connector.settings.yml
+++ b/config/sata_emea/remote_dev/acquia_connector.settings.yml
@@ -34,6 +34,7 @@ spi:
     variables: {  }
     time: 0
   cron_interval: 28800
+  site_environment: dev
 mapping:
   acquia_spi_send_node_user:
     - acquia_connector.settings
