--- a/config/sata_us/default/search_api_solr.solr_field_type.text_und_7_0_0.yml
+++ b/config/sata_us/default/search_api_solr.solr_field_type.text_und_7_0_0.yml
@@ -184,10 +184,8 @@ solr_configs:
               name: buildOnStartup
               VALUE: 'false'
 text_files:
-  stopwords: |
-
-  protwords: |
-
+  stopwords: ''
+  protwords: ''
   accents: |
     # À => A
     "\u00C0" => "A"
