--- a/config/gearwrench/remote_dev/acquia_connector.settings.yml
+++ b/config/gearwrench/remote_dev/acquia_connector.settings.yml
@@ -36,6 +36,7 @@ spi:
   cron_interval: 28800
   site_environment: dev
   site_uuid: 8e6640da-9fe2-4d06-a32e-ff1c0e0df141
+  env_detection_enabled: true
 mapping:
   acquia_spi_send_node_user:
     - acquia_connector.settings
