--- a/config/gearwrench_au/default/webform.webform.warranty_replacement_form.yml
+++ b/config/gearwrench_au/default/webform.webform.warranty_replacement_form.yml
@@ -144,6 +144,9 @@ elements: |-
         actions:
           '#type': webform_actions
           '#title': 'Submit button(s)'
+  page_1:
+    '#type': webform_wizard_page
+    '#title': 'Page 1'
 css: ''
 javascript: ''
 settings:
