--- a/config/gearwrench_au/remote_dev/acquia_connector.settings.yml
+++ b/config/gearwrench_au/remote_dev/acquia_connector.settings.yml
@@ -32,6 +32,9 @@ spi:
     variables: {  }
     time: 0
   cron_interval: 28800
+  site_environment: dev
+  site_uuid: 43f68812-2b44-412f-86ba-502e2e130945
+  env_detection_enabled: true
 mapping:
   acquia_spi_send_node_user:
     - acquia_connector.settings
