--- a/config/sata_emea/default/field.field.node.page.field_components.yml
+++ b/config/sata_emea/default/field.field.node.page.field_components.yml
@@ -8,7 +8,7 @@ dependencies:
     - paragraphs.paragraphs_type.accordion
     - paragraphs.paragraphs_type.content
     - paragraphs.paragraphs_type.content_2_column
-    - paragraphs.paragraphs_type.content_callout_container
+    - paragraphs.paragraphs_type.content_callout
     - paragraphs.paragraphs_type.digital_resources
     - paragraphs.paragraphs_type.embed_block
     - paragraphs.paragraphs_type.embed_iframe
@@ -39,7 +39,7 @@ settings:
       accordion: accordion
       content: content
       content_2_column: content_2_column
-      content_callout_container: content_callout_container
+      content_callout: content_callout
       digital_resources: digital_resources
       embed_block: embed_block
       embed_iframe: embed_iframe
@@ -54,69 +54,75 @@ settings:
     negate: 0
     target_bundles_drag_drop:
       accordion:
-        weight: -45
+        weight: -49
         enabled: true
       accordion_item:
-        weight: -40
+        weight: -43
         enabled: false
       content:
-        weight: -44
+        weight: -48
         enabled: true
       content_2_column:
-        weight: -43
+        weight: -47
         enabled: true
       content_callout:
-        weight: -25
-        enabled: false
-      content_callout_container:
-        weight: -42
+        weight: -46
         enabled: true
+      content_callout_container:
+        weight: -45
+        enabled: false
+      content_driver:
+        weight: -27
+        enabled: false
+      content_driver_item:
+        weight: -26
+        enabled: false
       digital_resources:
-        weight: -41
+        weight: -44
         enabled: true
       embed_block:
-        weight: -39
+        weight: -42
         enabled: true
       embed_iframe:
-        weight: -38
+        weight: -41
         enabled: true
       embed_view:
-        weight: -37
+        weight: -40
         enabled: true
       featured_content:
-        weight: -36
+        weight: -39
         enabled: true
       featured_links:
-        weight: -35
+        weight: -38
         enabled: true
       featured_media:
-        weight: -34
+        weight: -37
         enabled: true
       hero:
-        weight: -33
+        weight: -36
         enabled: false
       hero_slide:
-        weight: -32
+        weight: -35
         enabled: false
       product_slider:
-        weight: -31
+        weight: -34
         enabled: true
       pullquote:
-        weight: -30
+        weight: -33
         enabled: false
       section:
-        weight: -29
+        weight: -32
         enabled: true
       step:
-        weight: -24
+        weight: -28
         enabled: false
       steps:
-        weight: -28
+        weight: -31
         enabled: true
       tabs:
-        weight: -27
+        weight: -30
         enabled: true
       tabs_tab:
-        weight: -26
+        weight: -29
         enabled: false
 field_type: entity_reference_revisions
